--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -1,31 +1,31 @@
-.header{
-    border: 2px solid brown;
-    background-color: brown;
-    color: white;
-height: 5rem;
-    width:100%;
-    z-index: 10;
+.header {
     position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 5rem;
+    background-color: #8a2b06;
+    color: white;
     display: flex;
-    justify-content: space-between;
-
+    justify-content: space-around;
     align-items: center;
-    padding: 10px 10ppx;
-    
-    
-}
-.cart{
-    
     
 
-}
-
-
-      
-       img {
-        width: 110%;
-        height: 25rem;
-        z-index: 0;
-        
-        transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
-      }
+    
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+    z-index: 10;
+  }
+  
+  .main-image {
+    width: 100%;
+    height: 25rem;
+    z-index: 0;
+    overflow: hidden;
+  }
+  
+  .main-image img {
+    width: 110%;
+    height: 100%;
+    object-fit: cover;
+    transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
+  }
