--- a/src/Card/Modal.module.css
+++ b/src/Card/Modal.module.css
@@ -13,12 +13,14 @@
     top: 20vh;
     left: 5%;
     width: 90%;
-    background-color: white;
+    background-color:black;
     padding: 1rem;
-    border-radius: 14px;
+    border-radius: 14px ;
+    border: 1px solid white;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     z-index: 30;
     animation: slide-down 300ms ease-out forwards;
+    color:aquamarine;
   }
   
   @media (min-width: 768px) {
