--- a/src/CartIcon/Cart.module.css
+++ b/src/CartIcon/Cart.module.css
@@ -24,25 +24,27 @@
     font: inherit;
     cursor: pointer;
     background-color: transparent;
-    border: 1px solid #8a2b06;
+    border: 1px solid blueviolet;
     padding: 0.5rem 2rem;
     border-radius: 25px;
     margin-left: 1rem;
+    float:right;
   }
   
   .actions button:hover,
   .actions button:active {
-    background-color: #5a1a01;
-    border-color: #5a1a01;
+    background-color:red;
+    
   }
 
   
   .actions .button--alt {  
-    color: #8a2b06;
+    color: white;
+    float: right;
   }
   
   
   .actions .button {
-    background-color: #8a2b06;
+    background-color: purple;
     color: white;
   }
